[package]
name = "swap-logic"
version = "0.1.0"
authors = ["Bryan RHEE <bryan.rhee@hdac.io>"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]
bench = false
doctest = false

[features]
std = ["contract/std", "types/std"]
lib = []
enable-bonding = []

[dependencies]
contract = { path = "../../../contract", package = "casperlabs-contract", features = ["std"] }
types = { path = "../../../types", package = "casperlabs-types", features = ["std"] }

libsecp256k1 = { version = "0.3.5", default-features = false }
sha2 = { version = "0.8.1", default-features = false }
hex = { version = "0.4.2", default-features = false }
num-traits = { version = "0.2.10", default-features = false }
base16 = { version = "0.2.1", default-features = false }
