[package]
name = "swap-proxy"
version = "0.1.0"
authors = ["joonho <jhyeom26@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]
bench = false
doctest = false
test = false

[features]
std = ["contract/std", "types/std"]
lib = []
enable-bonding = []

[dependencies]
contract = { path = "../../../contract", package = "casperlabs-contract", features = ["std"] }
types = { path = "../../../types", package = "casperlabs-types", features = ["std"] }
