[package]
name = "tests"
version = "0.1.0"
authors = ["Bryan RHEE <bryan.rhee@hdac.io>"]
edition = "2018"

[features]
enable-bonding = ["engine-test-support/enable-bonding"]
use-as-wasm = ["engine-test-support/use-as-wasm"]
use-system-contracts = ["engine-test-support/use-system-contracts"]

[dependencies]
contract = { git="https://github.com/hdac-io/CasperLabs", branch="master", package = "casperlabs-contract", features = ["std"] }
types = { git="https://github.com/hdac-io/CasperLabs", branch="master", package = "casperlabs-types", features = ["std"] }
base16 = "0.2.1"
clap = "2"
crossbeam-channel = "0.4.0"
engine-core = { git="https://github.com/hdac-io/CasperLabs", branch="master", package = "casperlabs-engine-core" }
engine-grpc-server = { git="https://github.com/hdac-io/CasperLabs", branch="master", package = "casperlabs-engine-grpc-server" }
engine-test-support = { git="https://github.com/hdac-io/CasperLabs", branch="master", package = "casperlabs-engine-test-support" }
env_logger = "0.7.1"
grpc = "0.6.1"
log = "0.4.8"

[dev-dependencies]
criterion = "0.3.0"
engine-shared = { git="https://github.com/hdac-io/CasperLabs", branch="master", package = "casperlabs-engine-shared" }
engine-storage = { git="https://github.com/hdac-io/CasperLabs", branch="master", package = "casperlabs-engine-storage" }
engine-wasm-prep = { git="https://github.com/hdac-io/CasperLabs", branch="master", package = "casperlabs-engine-wasm-prep" }
lazy_static = "1"
num-traits = "0.2.10"
serde_json = "1"
tempfile = "3"
wabt = "0.9.2"

[lib]
bench = false
